Update tomcat to 10.1.35 and add --add-opens parameter needed for JDK17 compatibility